save in db content

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GITHUB_BACKEND_BASED_URL=https://github-radar.actechworld.com
 OLLAMA_BASED_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b_32K
